# strain-seer

./: .bumpversion.toml  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  strain_analysis.py  strain_analysis_core.py  strain_analysis_data.py  strain_analysis_ui.py  streamlit_app.py
.github/workflows/: README.md  build-test.yaml  docker-publish-test.yaml  docker-publish.yaml  publish-image.yaml  unit-test.yaml
agents/: web_search.py
chains/: types.py  web_search.py
components/: chat_ui.py  page_ui.py
config/: envs.py
docs/: LCEL-with-pydantic.md  Understanding 2D Strain.md  benchmarking-runnables.md  developer-guide.md  docker-design.md  strain-seer-demo-analysis-result.csv  strain-seer-demo-raw-data.csv  understanding-2d-strain.md  version-management.md
docs/hammer-challenge/: connecting-rod-instructions.md
factories/: response_stream.py
llms/: openai.py
pages/: chat.py
prompts/: multi_task.py  single_task.py  summarizer.py
tasks/: search.py
tests/: README.md  test_strain_analysis.py  test_strain_analysis_core.py  test_strain_analysis_data.py  test_weather.py  test_web_search.py
tools/: vecterstore.py  weather.py  web_search.py
