[project]
name = "strain_seer"
version = "0.1.0"
description = "Strain Seer is a free-open-source tool for analyzing force and 2D strain relationships in metamorphic manufacturing."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Keming He", email = "keminghe.career@gmail.com" }
]
keywords = ["strain", "streamlit", "analysis"]
classifiers = []
dependencies = [
    "pyarrow (==19)",
    "streamlit (>=1.44.0,<2.0.0)",
    "streamlit-image-annotation (>=0.5.0,<0.6.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[project.urls]
homepage = "https://strain-seer.streamlit.app"
repository = "https://github.com/KemingHe/strain-seer"
documentation = "https://github.com/KemingHe/strain-seer/blob/main/README.md"
"Bug Tracker" = "https://github.com/KemingHe/strain-seer/issues"

[tool.poetry]
package-mode = false
requires-poetry = ">2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
